ajouts locales supports

--- a/html/index.html
+++ b/html/index.html
@@ -5,17 +5,17 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; script-src 'self' 'unsafe-inline';">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IA-Phone</title>
-  <link rel="stylesheet" href="app.css" />
+  <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
   <div id="phone" class="hidden">
     <div class="status">
       <span class="dot"></span>
       <span class="title">IA-Phone</span>
-      <button id="btnClose" class="close">×</button>
+      <button id="btnClose" class="close">ï¿½</button>
     </div>
     <div class="content">
-      <p id="info">Chargement…</p>
+      <p id="info">Chargementï¿½</p>
       <div class="apps">
         <button class="app" id="appNotes">Notes</button>
         <!-- Tu pourras ajouter Contacts / SMS / Appels / IA ici -->
@@ -23,6 +23,6 @@
       <div id="view"></div>
     </div>
   </div>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
