--- a/html/index.html
+++ b/html/index.html
@@ -1,85 +1,39 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    connect-src 'self' https://ia-phone/;
-    img-src 'self' data:;
-    style-src 'self' 'unsafe-inline';
-    script-src 'self' 'unsafe-inline';
-  ">
+  <meta charset="utf-8" />
+  <!-- CSP minimale compatible NUI -->
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self';
+                 connect-src 'self' https://ia-phone/;
+                 img-src 'self' data:;
+                 style-src 'self' 'unsafe-inline';
+                 script-src 'self' 'unsafe-inline';">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IA-Phone</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
-  <div id="phone" class="hidden">
-    <div class="status">
-      <span class="dot"></span>
-      <span class="title">IA-Phone</span>
-      <button id="btnClose" class="close" aria-label="Fermer" title="Fermer">&times;</button>
-    </div>
-
-    <div class="content">
-      <p id="info">Chargement…</p>
-
-      <div class="apps">
-        <button class="app" id="appNotes">Notes</button>
-        <!-- tu pourras ajouter Contacts / SMS / Appels / IA ici -->
+  <div id="phone" class="phone hidden" aria-hidden="true">
+    <div class="bezel">
+      <div class="notch">
+        <div class="cam"></div>
+        <div class="speaker"></div>
       </div>
 
-      <div id="view"></div>
+      <div class="status">
+        <span class="dot" aria-hidden="true"></span>
+        <span class="title">IA-Phone</span>
+        <button id="btnClose" class="close" title="Fermer" aria-label="Fermer">×</button>
+      </div>
+
+      <div class="content">
+        <p id="info" class="muted">Chargement…</p>
+        <div id="view" class="view"></div>
+      </div>
     </div>
   </div>
 
-  <!-- Templates Mustache -->
-  <script id="tpl-notes-list" type="x-tmpl-mustache">
-    <div class="notes-header">
-      <h2>Notes</h2>
-      <button id="btnNewNote" class="primary">Nouvelle</button>
-    </div>
-    {{#hasNotes}}
-      <ul class="notes-list">
-        {{#notes}}
-          <li data-id="{{id}}">
-            <div class="note-row">
-              <div class="note-title">{{title}}</div>
-              <div class="note-date">{{date}}</div>
-            </div>
-            <div class="note-actions">
-              <button class="btnEdit">Éditer</button>
-              <button class="btnDelete danger">Supprimer</button>
-            </div>
-          </li>
-        {{/notes}}
-      </ul>
-    {{/hasNotes}}
-    {{^hasNotes}}
-      <div class="empty">Aucune note pour le moment.</div>
-    {{/hasNotes}}
-  </script>
-
-  <script id="tpl-note-editor" type="x-tmpl-mustache">
-    <div class="editor">
-      <div class="editor-head">
-        <button id="btnBack" class="link">&larr; Retour</button>
-        <h2>{{header}}</h2>
-        <div></div>
-      </div>
-      <label>Titre</label>
-      <input id="noteTitle" type="text" placeholder="Titre" value="{{title}}"/>
-      <label>Contenu</label>
-      <textarea id="noteBody" placeholder="Écris ta note ici...">{{body}}</textarea>
-      <div class="editor-actions">
-        <button id="btnCancel">Annuler</button>
-        <button id="btnSave" class="primary">Enregistrer</button>
-      </div>
-    </div>
-  </script>
-
-  <!-- Scripts -->
-  <script src="scripts/mustache.min.js"></script>
-  <script src="scripts/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
