--- a/html/index.html
+++ b/html/index.html
@@ -24,11 +24,11 @@
       <div class="status">
         <span class="dot" aria-hidden="true"></span>
         <span class="title">IA-Phone</span>
-        <button id="btnClose" class="close" title="Fermer" aria-label="Fermer">×</button>
+        <button id="btnClose" class="close" title="Fermer" aria-label="Fermer">Ã—</button>
       </div>
 
       <div class="content">
-        <p id="info" class="muted">Chargement…</p>
+        <p id="info" class="muted">Chargementâ€¦</p>
         <div id="view" class="view"></div>
       </div>
     </div>
