--- a/html/index.html
+++ b/html/index.html
@@ -2,19 +2,20 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <!-- CSP minimale compatible NUI -->
   <meta http-equiv="Content-Security-Policy"
         content="default-src 'self';
                  connect-src 'self' https://ia-phone/;
                  img-src 'self' data:;
                  style-src 'self' 'unsafe-inline';
+                 font-src 'self' data:;
                  script-src 'self' 'unsafe-inline';">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IA-Phone</title>
   <link rel="stylesheet" href="css/app.css" />
 </head>
 <body>
-  <div id="phone" class="phone hidden" aria-hidden="true">
+  <!-- NOTE: plus de .hidden: les animations utilisent opacity/visibility/pointer-events -->
+  <div id="phone" class="phone" aria-hidden="true">
     <div class="bezel">
       <div class="notch">
         <div class="cam"></div>
@@ -28,8 +29,56 @@
       </div>
 
       <div class="content">
-        <p id="info" class="muted">Chargement…</p>
-        <div id="view" class="view"></div>
+        <div class="homescreen" id="homescreen" role="region" aria-label="Écran d’accueil">
+          <div class="clock">
+            <div id="hsTime" class="time">12:45</div>
+            <div id="hsDate" class="date">lun. 07 novembre</div>
+          </div>
+
+          <div class="apps" id="appsGrid" role="list" aria-label="Applications">
+            <!-- Appels -->
+            <button class="app" role="listitem" data-app="calls" aria-label="Appels" title="Appels">
+              <span class="app-icon green">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M21 16.5v3a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.43 19.43 0 0 1-6-6A19.8 19.8 0 0 1 1.5 3.18 2 2 0 0 1 3.5 1h3A2 2 0 0 1 8.5 2.72a12.7 12.7 0 0 0 .7 2.78 2 2 0 0 1-.45 2.11L7.7 9.66a16 16 0 0 0 6.66 6.64l2.05-1.06a2 2 0 0 1 2.12-.44 12.7 12.7 0 0 0 2.78.7A2 2 0 0 1 21 16.5z"/>
+                </svg>
+              </span>
+              <span class="app-label">Appels</span>
+            </button>
+
+            <!-- Messages -->
+            <button class="app" role="listitem" data-app="messages" aria-label="Messages" title="Messages">
+              <span class="app-icon blue">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M20 2H4a2 2 0 0 0-2 2v14l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"/>
+                </svg>
+              </span>
+              <span class="app-label">Messages</span>
+            </button>
+
+            <!-- Contacts -->
+            <button class="app" role="listitem" data-app="contacts" aria-label="Contacts" title="Contacts">
+              <span class="app-icon orange">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M15 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0zM2 20a7 7 0 0 1 14 0v1H2v-1zM18 3h3v2h-3V3zm0 4h3v2h-3V7zm0 4h3v2h-3v-2z"/>
+                </svg>
+              </span>
+              <span class="app-label">Contacts</span>
+            </button>
+
+            <!-- Réglages -->
+            <button class="app" role="listitem" data-app="settings" aria-label="Réglages" title="Réglages">
+              <span class="app-icon gray">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M19.14 12.94a7.47 7.47 0 0 0 .05-1 7.47 7.47 0 0 0-.05-1l2.11-1.65a.5.5 0 0 0 .12-.64l-2-3.46a.5.5 0 0 0-.6-.22l-2.49 1a7.21 7.21 0 0 0-1.73-1L14.5 2h-5l-.35 2a7.21 7.21 0 0 0-1.73 1l-2.49-1a.5.5 0 0 0-.6.22l-2 3.46a.5.5 0 0 0 .12.64L3.86 10a7.47 7.47 0 0 0 0 2l-2.11 1.65a.5.5 0 0 0-.12.64l2 3.46a.5.5 0 0 0 .6.22l2.49-1a7.21 7.21 0 0 0 1.73 1l.35 2h5l.35-2a7.21 7.21 0 0 0 1.73-1l2.49 1a.5.5 0 0 0 .6-.22l2-3.46a.5.5 0 0 0-.12-.64L19.14 12.94zM12 15.5A3.5 3.5 0 1 1 15.5 12 3.5 3.5 0 0 1 12 15.5z"/>
+                </svg>
+              </span>
+              <span class="app-label">Réglages</span>
+            </button>
+          </div>
+        </div>
+
+        <p id="info" class="muted sr-only">Chargement…</p>
       </div>
     </div>
   </div>
