Ajouts gestion des Contacts.

--- a/html/index.html
+++ b/html/index.html
@@ -157,10 +157,11 @@
 				  <div class="msg-subtitle" id="detailContactNumber">Numéro</div>
 				</div>
 			  </div>
-			  <div class="msg-body contact-details-actions">
-				<button class="btn-primary"  id="btnMessageContact">Envoyer un message</button>
-				<button class="btn-secondary" id="btnCallContact">Appeler</button>
-			  </div>
+              <div class="msg-body contact-details-actions">
+                  <button class="btn-primary" id="btnMessageContact">Envoyer un message</button>
+                  <button class="btn-secondary" id="btnCallContact">Appeler</button>
+                  <button class="btn-tertiary" id="btnDelContact">Supprimer</button>
+              </div>
 			</div>
 
 
